[api-doc] category 관련 api 구현
